@@ -95,12 +95,12 @@ peak.running.cluster.* =
 web_templates = "peak.web.templates"
 os = "os"
 cursfmts = "peak.storage.cursor_formatters"
+run_sched = "peak.running.scheduler"
 
 # Shortcuts defined in a file are carried over to files that are loaded from
 # within the file.  But the reverse is not true: included files cannot define
 # shortcuts that affect the including file.  This keeps you from having to
 # trace every included file to find out where a definition is coming from.
-
 
 
 
@@ -476,17 +476,6 @@ version-config =
 # be interfaces, although that is the most common usage.  They may be any
 # object that supports 'config.IConfigKey'.
 
-peak.events.interfaces.IScheduler = events.Scheduler
-
-peak.storage.interfaces.ITransactionService =
-    'peak.storage.transactions.TransactionService'
-
-peak.running.interfaces.ISignalManager  = 'peak.running.process.SignalManager'
-peak.running.interfaces.IMainLoop       = 'peak.running.scheduler.MainLoop'
-peak.running.interfaces.ITaskQueue      = 'peak.running.daemons.TaskQueue'
-peak.running.interfaces.IBasicReactor   = 'peak.running.scheduler.getReactor'
-peak.running.interfaces.ITwistedReactor = 'peak.running.scheduler.getTwisted'
-
 peak.running.timers.ITimerService   = 'peak.running.timers.TimerService'
 peak.running.timers.ITimer          = 'peak.running.timers.Timer'
 
@@ -494,6 +483,51 @@ peak.web.interfaces.IAuthService    = web.NullAuthenticationService
 peak.web.interfaces.IWebInteraction = web.Interaction
 peak.web.interfaces.ISkinService    = web.SkinService
 peak.web.interfaces.ILayerService   = web.LayerService
+
+peak.storage.interfaces.ITransactionService =
+    'peak.storage.transactions.TransactionService'
+
+
+
+
+peak.running.interfaces.ITaskQueue      = 'peak.running.daemons.TaskQueue'
+peak.running.interfaces.ISignalManager  = 'peak.running.process.SignalManager'
+peak.running.interfaces.IMainLoop       = run_sched.MainLoop
+
+peak.events.interfaces.IScheduler =
+    run_sched.ifTwisted(
+        targetObj, run_sched.TwistedScheduler, events.Scheduler
+    )
+
+peak.running.interfaces.IBasicReactor   =
+    run_sched.ifTwisted(
+        targetObj, run_sched.getTwisted, run_sched.UntwistedReactor
+    )
+
+peak.running.interfaces.ITwistedReactor =
+    # Force Twisted to be used, or else get an error
+    run_sched.makeTwisted(targetObj) and run_sched.getTwisted
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 [peak.logs]
@@ -525,6 +559,12 @@ EMERG    = 70
 
 peak.running.logs.ILogEvent         = logs.Event
 peak.running.logs.ILoggingService   = logs.DefaultLoggingService
+
+
+
+
+
+
 
 
 
